# rust-geocoding

./: CHANGELOG.md  CHANGES.md  Cargo.toml  README.md
.github/: release-please-config.json
.github/workflows/: ci.yml  publish.yaml  test.yml
src/: geoadmin.rs  lib.rs  opencage.rs  openstreetmap.rs
