[package]
name = "geocoding-async"
description = "Asynchronous Geocoding library for Rust"
version = "0.5.0"
authors = ["Randolf J. <rjung@jeongjh.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jun-sheaf/geocoding-async"
keywords = ["gecoding", "geo", "gis", "geospatial"]
readme = "README.md"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
thiserror = "1"
geo-types = "0.7"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
hyper = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[features]
default = ["reqwest/default"]
rustls-tls = ["reqwest/rustls-tls"]
